[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Scripts/DeathMenu.gd" type="Script" id=1]
[ext_resource path="res://Font.tres" type="BitmapFont" id=2]
[ext_resource path="res://Assets/Overlays/ReturnButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/Gem.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/SymbolRevive.png" type="Texture" id=5]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/Coin.png-e80fc66f97e62b9817b5f985793b68f0.stex"

[node name="DeathMenu" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Node2D" parent="."]
position = Vector2( 0, 70 )

[node name="Background" type="ColorRect" parent="Panel"]
margin_right = 160.0
margin_bottom = 20.0
color = Color( 0.133333, 0.12549, 0.203922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalCoinsLabel" type="Label" parent="Panel"]
margin_left = 124.0
margin_top = 1.0
margin_right = 159.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 2 )
text = "00000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalGemsLabel" type="Label" parent="Panel"]
margin_left = 124.0
margin_top = 10.0
margin_right = 159.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "00000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReviveCostLabel" type="Label" parent="Panel"]
margin_left = 40.0
margin_top = 9.0
margin_right = 75.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "00000"

[node name="ReviveButton" type="TextureButton" parent="Panel"]
margin_left = 22.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 18.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" parent="Panel" instance=ExtResource( 3 )]
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 18.0

[node name="SymbolCoin" type="Sprite" parent="Panel"]
position = Vector2( 119, 5 )
texture = SubResource( 1 )

[node name="SymbolGem" type="Sprite" parent="Panel"]
position = Vector2( 119, 15 )
texture = ExtResource( 4 )
[connection signal="pressed" from="Panel/ReviveButton" to="." method="_on_ReviveButton_pressed"]
